fixed text-wrap & detail's cancel button

--- a/src/main/resources/static/css/basicstyle.css
+++ b/src/main/resources/static/css/basicstyle.css
@@ -5,6 +5,7 @@
     width: 100%;
     padding: 15px;
     background-color: whitesmoke;
+    table-layout: fixed;
 }
 
 .msgth {
@@ -17,6 +18,7 @@
     border: 1px solid azure;
     text-align: center;
     padding: 5px;
+    word-wrap: break-word;
     }
 
 .msgtr:nth-child(even) {
@@ -105,5 +107,6 @@ button:disabled {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    word-wrap: break-word;
 }
 
